--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>home</title>
 </head>
 <body>
-    <h1>sheet charickter creation</h1>
+    <h1>sheet character creation</h1>
     <form id="form">
 
     </form>
