--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>home</title>
 </head>
 <body>
-    <h1>sheet character creation</h1>
-    <form id="form">
-
-    </form>
+    <div id="main">
+        <h1>sheet character creation</h1>
+        <form id="form">
+    
+        </form>
+    </div>
+    
 </body>
 <script src="main.js"></script>
 
