--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>home</title>
 </head>
 <body>
-   
+   <main id="main">
+
+   </main>
         <div id ="mainSec">
-            <p>ch1</p><br>
+            
             <form>
                 <label>name</label>
                 <input type="text" placeholder="char name">
@@ -77,5 +79,5 @@
     
 </body>
 <script src="main.js"></script>
-
+<script src="/components/forms.js"></script>
 </html>
