--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>home</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        <div id ="main" ></div>
         
+        <div id ="main">
+
+        </div>
+        <script src="comonents.js"></script>
         <script src="main.js" async defer></script>
     </body>
 </html>
